--- a/somanumeros.html
+++ b/somanumeros.html
@@ -40,7 +40,7 @@
 <footer class="links">
 
     
-    <h4>Desenvolvido por</h4>
+    <h4>Minhas redes</h4>
     <a href="https://github.com/leomckk" target="_blank" class="github">
         <img src="./imgs/github-mark-white.png" class="github">
     </a>
